--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="image.png">
+            <img src="/imgs/image.png">
             <p>My learning journal</p>
         </div>
         <nav>
@@ -28,11 +28,15 @@
             <p>After several months of learning in the Frontend Developer Career Path, I've made the big jump over to
                 the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
         </section>
+        <section class="blogs">
+
+        </section>
     </main>
     <footer>
-
+        <p>My Learning Journal</p>
+        <p>Copyright &copy2025</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
