--- a/pag1/index.html
+++ b/pag1/index.html
@@ -29,8 +29,10 @@
                 the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
         </section>
         <section class="blogs">
-
         </section>
+        <div class="addBlogs">
+            <p class="moreView">View More</p>
+        </div>
     </main>
     <footer>
         <p>My Learning Journal</p>
