--- a/pag1/home.html
+++ b/pag1/home.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -15,9 +18,11 @@
             <p>My learning journal</p>
         </div>
         <nav>
-            <ul>
-                <li>HOME</li>
-                <li>ABOUT ME</li>
+            <i class="fa-solid fa-bars"></i>
+            <ul class="navBar">
+                <li><a href="/pag1/home.html">HOME</a></li>
+                <li><a href="/pag2/info.html">MORE INFO</a></li>
+                <li><a href="/pag3/about.html">ABOUT ME</a></li>
             </ul>
         </nav>
     </header>
