--- a/pag2/info.html
+++ b/pag2/info.html
@@ -19,7 +19,7 @@
         </div>
         <nav>
             <i class="fa-solid fa-bars"></i>
-            <ul class="navBar">
+            <ul class="navBar hide">
                 <li><a href="/pag1/home.html">HOME</a></li>
                 <li><a href="/pag2/info.html">MORE INFO</a></li>
                 <li><a href="/pag3/about.html">ABOUT ME</a></li>
